# ecmh

./: CMakeLists.txt  README.md
python/: generate_binary_elliptic_curve_benchmark.py  generate_binary_elliptic_curve_test.py  generate_binary_field_base_test.py  generate_binary_field_benchmark.py  generate_binary_field_code.py  generate_binary_field_core_benchmark.py  generate_binary_field_inversion_chain.py  generate_binary_field_inversion_chain_minimum_length_options.py  generate_binary_field_inversion_chain_options.py  generate_binary_field_inversion_chain_options_benchmark.py  generate_binary_field_quadratic_extension_code.py  generate_binary_field_quadratic_extension_test.py  generate_chains.py  generate_ecmh_benchmark.py  generate_ecmh_test.py  generate_simple_multiset_hash_benchmark.py  generate_simple_multiset_hash_test.py  generic_search.py  parse_benchmark_data.py  run_command_and_write_output.py
src/generate/: generate_binary_field_code.cpp  generate_quadratic_extension_curve.cpp  generate_standard_binary_elliptic_curve.cpp
src/jbms/: benchmark.hpp  ctr_drbg.hpp  cycle_count.hpp  hugepages.hpp
src/jbms/binary_elliptic_curve/: Point.hpp  compress_point.hpp  sw.hpp  sw_blinded.hpp
src/jbms/binary_field/: GF2m.hpp  QuadraticExtension.hpp  assign_hash.hpp  batch_invert.hpp  rand_element.hpp
src/jbms/binary_field/detail/: GF2.hpp  apply_linear_table_transform.hpp  field_operation_helpers.hpp  limb_ops.hpp  polynomial_base.hpp  polynomial_reduce_163_7_6_3.hpp  polynomial_reduce_193_15.hpp  polynomial_reduce_233_74.hpp  polynomial_reduce_239_158.hpp  polynomial_reduce_283_12_7_5.hpp  polynomial_reduce_409_87.hpp  polynomial_reduce_571_10_5_2.hpp
src/jbms/hash/: hash_expand.hpp
src/jbms/multiset_hash/: AdHash.hpp  ECMH.hpp  MuHash.hpp
src/jbms/multiset_hash/detail/: operation_helpers.hpp
src/test/binary_elliptic_curve/: benchmark.hpp  rand_point_not_infinity.hpp  test_generic_curve.hpp
src/test/binary_field/: EmbeddedField.hpp  benchmark.hpp  benchmark_mont_mul.cpp  test_base_field.hpp  test_field_match.hpp  test_generic_field.hpp  test_quadratic_extension.hpp
src/test/multiset_hash/: benchmark_adhash.hpp  benchmark_adhash_or_muhash.hpp  benchmark_binary_field_assign_hash.hpp  benchmark_generic_multiset_hash.hpp  benchmark_muhash.hpp  test_adhash.hpp  test_generic_multiset_hash.hpp  test_muhash.hpp
